--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <script src="https://cdn.jsdelivr.net/npm/vexflow@4.0.0/build/vexflow.js"></script>
   </head>
   <body>
+    <div class="header">
+      <h1>Musicle</h1>
+    </div>
+
     <div class="container">
       <div class="item-1-help">Help</div>
       <div class="item-2-score">Score
