refactor creating vexflow context - adjusting scores

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Musicle</title>
     <base href=".">
     <link rel="stylesheet" href="styles.css">
-    <script type = "module" src="app.js" charset="utf-8" defer></script>
+    <script type="module" src="app.js" charset="utf-8" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/vexflow@4.0.0/build/vexflow.js"></script>
   </head>
   <body>
@@ -17,8 +17,11 @@
 
     <div class="container">
       <div class="item-1-help">Help</div>
-      <div class="item-2-score">Score
-        <div id="score-1"></div>
+      <div class="item-2-score-flex-container">Score
+
+        <div class="flex-child score-1">Flex Column 1</div>
+        <div class="flex-child score-2">Flex Column 2</div>
+
       </div>
       <div class="item-3-settings">Settings</div>
       <div class="item-4-piano">Piano
@@ -52,17 +55,3 @@
 
   </body>
 </html>
-
-
-<!div data-note="C" class="key white"></div>
-<!div data-note="Db" class="key black"></div>
-<!div data-note="D" class="key white"></div>
-<!div data-note="Eb" class="key black"></div>
-<!div data-note="E" class="key white"></div>
-<!div data-note="F" class="key white"></div>
-<!div data-note="Gb" class="key black"></div>
-<!div data-note="G" class="key white"></div>
-<!div data-note="Ab" class="key black"></div>
-<!div data-note="A" class="key white"></div>
-<!div data-note="Bb" class="key black"></div>
-<!div data-note="B" class="key white"></div>
