Add generating notes in discrete flex items

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="item-1-help">Help</div>
       <div class="item-2-score-flex-container">Score
 
-        <div class="flex-child score-1">Flex Column 1</div>
-        <div class="flex-child score-2">Flex Column 2</div>
+        <div class="flex-child" id="score-1">Flex Column 1</div>
+        <div class="flex-child" id="score-2">Flex Column 2</div>
 
       </div>
       <div class="item-3-settings">Settings</div>
