add second octave for piano

--- a/index.html
+++ b/index.html
@@ -17,48 +17,67 @@
 
     <div class="container">
       <div class="item-1-help">Help</div>
-      
-      <!--div class="item-2-score-flex-container">Score
-
-        <div class="flex-child" id="score-1">Flex Column 1</div>
-        <div class="flex-child" id="score-2">Flex Column 2</div>
-
-      <div-->
 
       <div class="message-container"></div>
+
       <div class="tile-container"></div>
 
       <div class="item-3-settings">Settings</div>
+      
       <div class="item-4-piano">
         <button id="enter">Enter</button>
-        <div data-note="C" class="key white"></div>
-        <div data-note="Db" class="key black"></div>
-        <div data-note="D" class="key white"></div>
-        <div data-note="Eb" class="key black"></div>
-        <div data-note="E" class="key white"></div>
-        <div data-note="F" class="key white"></div>
-        <div data-note="Gb" class="key black"></div>
-        <div data-note="G" class="key white"></div>
-        <div data-note="Ab" class="key black"></div>
-        <div data-note="A" class="key white"></div>
-        <div data-note="Bb" class="key black"></div>
-        <div data-note="B" class="key white"></div>
+        <div data-note="48" class="key white"></div>
+        <div data-note="49" class="key black"></div>
+        <div data-note="50" class="key white"></div>
+        <div data-note="51" class="key black"></div>
+        <div data-note="52" class="key white"></div>
+        <div data-note="53" class="key white"></div>
+        <div data-note="54" class="key black"></div>
+        <div data-note="55" class="key white"></div>
+        <div data-note="56" class="key black"></div>
+        <div data-note="57" class="key white"></div>
+        <div data-note="58" class="key black"></div>
+        <div data-note="59" class="key white"></div>
+        <div data-note="60" class="key white"></div>
+        <div data-note="61" class="key black"></div>
+        <div data-note="62" class="key white"></div>
+        <div data-note="63" class="key black"></div>
+        <div data-note="64" class="key white"></div>
+        <div data-note="65" class="key white"></div>
+        <div data-note="66" class="key black"></div>
+        <div data-note="67" class="key white"></div>
+        <div data-note="68" class="key black"></div>
+        <div data-note="69" class="key white"></div>
+        <div data-note="70" class="key black"></div>
+        <div data-note="71" class="key white"></div>
         <button id="delete">Delete</button>
       </div>
     </div>
 
-    <audio id="C" src="notes/notes_C.mp3"></audio>
-    <audio id="Db" src="notes/notes_Db.mp3"></audio>
-    <audio id="D" src="notes/notes_D.mp3"></audio>
-    <audio id="Eb" src="notes/notes_Eb.mp3"></audio>
-    <audio id="E" src="notes/notes_E.mp3"></audio>
-    <audio id="F" src="notes/notes_F.mp3"></audio>
-    <audio id="G" src="notes/notes_G.mp3"></audio>
-    <audio id="Gb" src="notes/notes_Gb.mp3"></audio>
-    <audio id="A" src="notes/notes_A.mp3"></audio>
-    <audio id="Ab" src="notes/notes_Ab.mp3"></audio>
-    <audio id="B" src="notes/notes_B.mp3"></audio>
-    <audio id="Bb" src="notes/notes_Bb.mp3"></audio>
+    <audio id="48" src="notes/notes_48.wav"></audio>
+    <audio id="49" src="notes/notes_49.wav"></audio>
+    <audio id="50" src="notes/notes_50.wav"></audio>
+    <audio id="51" src="notes/notes_51.wav"></audio>
+    <audio id="52" src="notes/notes_52.wav"></audio>
+    <audio id="53" src="notes/notes_53.wav"></audio>
+    <audio id="54" src="notes/notes_54.wav"></audio>
+    <audio id="55" src="notes/notes_55.wav"></audio>
+    <audio id="56" src="notes/notes_56.wav"></audio>
+    <audio id="57" src="notes/notes_57.wav"></audio>
+    <audio id="58" src="notes/notes_58.wav"></audio>
+    <audio id="59" src="notes/notes_59.wav"></audio>
+    <audio id="60" src="notes/notes_60.wav"></audio>
+    <audio id="61" src="notes/notes_61.wav"></audio>
+    <audio id="62" src="notes/notes_62.wav"></audio>
+    <audio id="63" src="notes/notes_63.wav"></audio>
+    <audio id="64" src="notes/notes_64.wav"></audio>
+    <audio id="65" src="notes/notes_65.wav"></audio>
+    <audio id="66" src="notes/notes_66.wav"></audio>
+    <audio id="67" src="notes/notes_67.wav"></audio>
+    <audio id="68" src="notes/notes_68.wav"></audio>
+    <audio id="69" src="notes/notes_69.wav"></audio>
+    <audio id="70" src="notes/notes_70.wav"></audio>
+    <audio id="71" src="notes/notes_71.wav"></audio>
 
   </body>
 </html>
