Remove unneccessary html key and audio elements

--- a/index.html
+++ b/index.html
@@ -24,36 +24,8 @@
 
       <div class="item-3-settings">Settings</div>
       
-      <div class="item-4-piano">
-        <button id="enter">Enter</button>
-        <button id="delete">Delete</button>
-      </div>
+      <div class="item-4-piano"></div>
     </div>
-
-    <audio id="48" src="notes/notes_48.wav"></audio>
-    <audio id="49" src="notes/notes_49.wav"></audio>
-    <audio id="50" src="notes/notes_50.wav"></audio>
-    <audio id="51" src="notes/notes_51.wav"></audio>
-    <audio id="52" src="notes/notes_52.wav"></audio>
-    <audio id="53" src="notes/notes_53.wav"></audio>
-    <audio id="54" src="notes/notes_54.wav"></audio>
-    <audio id="55" src="notes/notes_55.wav"></audio>
-    <audio id="56" src="notes/notes_56.wav"></audio>
-    <audio id="57" src="notes/notes_57.wav"></audio>
-    <audio id="58" src="notes/notes_58.wav"></audio>
-    <audio id="59" src="notes/notes_59.wav"></audio>
-    <audio id="60" src="notes/notes_60.wav"></audio>
-    <audio id="61" src="notes/notes_61.wav"></audio>
-    <audio id="62" src="notes/notes_62.wav"></audio>
-    <audio id="63" src="notes/notes_63.wav"></audio>
-    <audio id="64" src="notes/notes_64.wav"></audio>
-    <audio id="65" src="notes/notes_65.wav"></audio>
-    <audio id="66" src="notes/notes_66.wav"></audio>
-    <audio id="67" src="notes/notes_67.wav"></audio>
-    <audio id="68" src="notes/notes_68.wav"></audio>
-    <audio id="69" src="notes/notes_69.wav"></audio>
-    <audio id="70" src="notes/notes_70.wav"></audio>
-    <audio id="71" src="notes/notes_71.wav"></audio>
-
+    
   </body>
 </html>
