Update index.html to treble

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="shortcut icon" href="#">
     <meta charset="utf-8">
-    <title>Musicle</title>
+    <title>Treble</title>
     <base href=".">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="app.js" charset="utf-8" defer></script>
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>Musicle</h1>
+      <h1>Treble</h1>
     </div>
 
     <div class="container">
