--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.1/build/global/luxon.min.js"></script>
   </head>
   <body>
-    <div class="header">
+    <header>
+      <i class="far fa-question-circle" id="help"></i>
       <h1>Treble</h1>
-    </div>
+      <i class="fas fa-chart-bar" id="stats"></i>
+    </header>
 
     <div class="container">
-      <div class="item-1-help">Help</div>
+      <!--div class="item-1-help">Help</div-->
 
       <div class="message-container"></div>
 
@@ -26,6 +28,49 @@
       <div class="item-3-settings">Settings</div>
       
       <div class="item-4-piano"></div>
+
+      <div id="help-modal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close" id="close-help">&times;</span>
+
+          <p>Guess the TREBLE in 6 tries.</p>
+
+          <p>
+            Each guess must be a 5 note musical phrase. Press the enter button to
+            submit.
+          </p>
+
+          <p>
+            After each guess, the color of the tiles will change to show how
+            close your guess was to the actual melody.
+          </p>
+
+          <!--img src="examples.png" id="examples" /-->
+
+          <hr />
+          <p>A new TREBLE will be available each day!</p>
+        </div>
+      </div>
+
+      <div id="stats-modal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close" id="close-stats">&times;</span>
+
+          <h2>STATISTICS</h2>
+
+          <h3><strong>Total</strong>: <span id="total-played"></span></h3>
+
+          <h3><strong>Wins</strong>: <span id="total-wins"></span></h3>
+
+          <h3><strong>Win %</strong>: <span id="win-pct"></span></h3>
+
+          <h3>
+            <strong>Current Streak</strong>: <span id="current-streak"></span>
+          </h3>
+        </div>
+
     </div>
     
   </body>
