--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
 
         <h2>SETTINGS</h2>
 
+        <h3><strong>Hard Mode</strong> </span></h3>
+
+        <!-- Rounded switch -->
+        <label class="switch">
+          <input type="checkbox" id="hardModeCheckBox">
+          <span class="slider round" id="hardModeSlider"></span>
+        </label>
+
         <!--h3><strong>Total</strong>: <span id="total-played"></span></h3>
 
         <h3><strong>Wins</strong>: <span id="total-wins"></span></h3>
