Start changing rendering based on screen type
Add css media queries to draw square tiles if on a phone, and rectangular
tiles if on a larger screen. Add javascript function to detect
screen resolution, and draw staves based on custom variables
tested on different screen emulations.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <link rel="shortcut icon" href="#">
     <meta charset="utf-8">
+    <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Treble</title>
     <base href=".">
     <link rel="stylesheet" href="style.css">
