--- a/index.html
+++ b/index.html
@@ -33,20 +33,23 @@
       <div class="piano-container"></div>
 
       <div id="stats-modal" class="modal">
-        <button class="fas fa-chart-bar" id="stats"> &#128202
+        <button class="fas fa-chart-bar" id="stats"> 
+          <img src="img/stats.svg" alt="Sorry, image could not be displayed" id="stats-img">
         </button>
 
       </div>
 
       <div id="settings-modal" class="modal">
-        <button class="fas fa-chart-bar" id="settings"> &#9881
+        <button class="fas fa-chart-bar" id="settings"> 
+          <img src="img/settings.svg" alt="Sorry, image could not be displayed" id="settings-img">
         </button>
 
       </div>
         
 
       <div id="help-modal" class="modal">
-        <button class="fas fa-chart-bar" id="help"> &#63
+        <button class="fas fa-chart-bar" id="help"> 
+          <img src="img/help.svg" alt="Sorry, image could not be displayed" id="help-img">
         </button>
       </div>
 
