Add scrollable song list in help modal

--- a/index.html
+++ b/index.html
@@ -89,12 +89,8 @@
       <div class="modal-content" id="help-modal-content">
         <span class="close" id="close-help">&times;</span>
 
-        <p>Guess the TREBLE in 6 tries.</p>
-
-        <p>
-          Each guess must be a 5 note musical phrase. Press the enter button to
-          submit.
-        </p>
+        <p>Guess the TREBLE in 6 tries. Each guess must be a 5 note musical phrase from the beginning of a song's melody. Press the enter button to
+          submit.</p>
 
         <p>
           After each guess, the color of the tiles will change to show how
@@ -103,8 +99,13 @@
 
         <!--img src="examples.png" id="examples" /-->
 
-        <hr />
         <p>A new TREBLE will be available each day!</p>
+
+        <p id="help-modal-song-paragraph">
+        <ul id="help-modal-song-list"></ul>
+        </p>
+
+
       </div>
     
   </body>
