Add keyboard diagram to help modal

--- a/index.html
+++ b/index.html
@@ -90,16 +90,13 @@
         <span class="close" id="close-help">&times;</span>
 
         <p>Guess the TREBLE in 6 tries. Each guess must be a 5 note musical phrase from the beginning of a song's melody. Press the enter button to
-          submit.</p>
+          submit. After each guess, the color of the tiles will change to show how
+          close your guess was to the actual melody. A new TREBLE will be available each day!</p>
 
-        <p>
-          After each guess, the color of the tiles will change to show how
-          close your guess was to the actual melody.
-        </p>
+        <p> <i>Scroll down for keyboard diagram and song list: </i></p>
 
-        <!--img src="examples.png" id="examples" /-->
-
-        <p>A new TREBLE will be available each day!</p>
+        <p>Keyboard diagram: </p>
+        <img src="img/keyboard_legend.png" alt="Sorry, this image could not be found">
 
         <p id="help-modal-song-paragraph">
         <ul id="help-modal-song-list"></ul>
