Add share results; fix typing and message bugs. Add function to generate matrix of colored square emojis and copy to clipboard for sharing results at end of game. Fix bug where musical typing outside of note range would throw error in the console. Fix bug where messages for hard mode violations would not show sometimes if you included one of the correct notes but not all. Add warning for caps lock so that it does not affect musical typing.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
         <h3>
           <strong>Current Streak</strong>: <span id="current-streak"></span>
         </h3>
+
+        <button> <b>SHARE</b> </button>
+        <h3 id="share-text"><i>Copied results to clipboard</i>
+        </h3>
+
       </div>
 
       <!-- Modal content -->
@@ -93,9 +98,9 @@
           submit. After each guess, the color of the tiles will change to show how
           close your guess was to the actual melody. A new TREBLE will be available each day!</p>
 
-        <p> <i>Scroll down for keyboard diagram and song list: </i></p>
+        <p> <i>Scroll down for musical typing diagram and song list: </i></p>
 
-        <p>Keyboard diagram: </p>
+        <p>MUSICAL TYPING: </p>
         <img src="img/keyboard_legend.png" alt="Sorry, this image could not be found">
 
         <p id="help-modal-song-paragraph">
