Configure webpack to compile for github pages
Remove './dist' folder and update webpack.config.js to bundle files in
the root folder for the repository. Update index.html and index.js paths
to account for changing file structure.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treble</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
@@ -60,7 +60,7 @@
           close your guess was to the actual melody. A new TREBLE will be available each day!</p>
         <p> <i>Scroll down for musical typing diagram and song list: </i></p>
         <p>MUSICAL TYPING: </p>
-        <img src="../img/keyboard_legend.png" alt="Sorry, this image could not be found">
+        <img src="img/keyboard_legend.png" alt="Sorry, this image could not be found">
         <p id="help-modal-song-paragraph">
         <ul id="help-modal-song-list"></ul>
         </p>
