--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       <div class="title">Treble</div>
       <div class="message-container"></div>
       <div class="tile-container"></div>
-      <div class="piano-container"></div>
+      <div class="piano-container">
+        <div class="edit-buttons">
+          <button id="enter">&#9094</button>
+          <button id="delete">&#9003</button>
+        </div>
+
+      </div>
       <div id="stats-modal" class="modal">
         <button class="fas fa-chart-bar" id="stats"> &#128202
         </button>
