Fix piano buttons, add drawNoteBuffer to try to speed up note rendering

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="tile-container"></div>
       <div class="piano-container">
         <div class="edit-buttons">
-          <button id="enter">&#9094</button>
-          <button id="delete">&#9003</button>
+          <button id="Enter">&#9094</button>
+          <button id="Delete">&#9003</button>
         </div>
 
       </div>
