Reverting to 04aab4e2182ee94fb991ed859e48cfaa1c07ab51

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="shortcut icon" href="#">
     <meta charset="utf-8">
-    <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Treble</title>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -13,13 +13,7 @@
       <div class="title">Treble</div>
       <div class="message-container"></div>
       <div class="tile-container"></div>
-      <div class="piano-container">
-        <div class="edit-buttons">
-          <button id="Enter">&#9094</button>
-          <button id="Delete">&#9003</button>
-        </div>
-
-      </div>
+      <div class="piano-container"></div>
       <div id="stats-modal" class="modal">
         <button class="fas fa-chart-bar" id="stats"> &#128202
         </button>
